--- a/index.html
+++ b/index.html
@@ -60,6 +60,31 @@
         <button type="submit" id="send-button">Send</button>
     </form>
 
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBapP3ABMNQ16ArkZ2Dxfg2UScg0FY_FNQ",
+    authDomain: "chat-2b69f.firebaseapp.com",
+    databaseURL: "https://chat-2b69f-default-rtdb.firebaseio.com",
+    projectId: "chat-2b69f",
+    storageBucket: "chat-2b69f.firebasestorage.app",
+    messagingSenderId: "212124817860",
+    appId: "1:212124817860:web:cf64e0d60a960ba87e2c91",
+    measurementId: "G-KFYK7F3385"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
     <script>
         const chatContainer = document.getElementById('chat-container');
         const messageForm = document.getElementById('message-form');
